# FilmTrack

./: .gitignore  .yarnrc.yml  LICENSE  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
changelog/: 0.3.3.md  v0.2.md  v0.3.1.md  v0.3.2.md  v0.3.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.4.5.md
config/: app.config.ts
docs/: DEVELOPMENT.md
scripts/: clear_database.py  rebuild_database.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: config.rs  lib.rs  main.rs  models.rs  services.rs  utils.rs
src-tauri/src/scrapers/: douban.rs  mod.rs
src-tauri/wix/: main.wxs
src/assets/styles/: fonts.css
src/components/business/: MovieCard.vue  TMDbMovieCard.vue
src/components/common/: ErrorToast.vue  LoadingOverlay.vue  Navigation.vue  TitleBar.vue
src/components/ui/: AlertDialog.vue  AppleDatePicker.vue  AppleSelect.vue  CachedImage.vue  DateField.vue  EditRecordModal.vue  HeadlessSelect.vue  InfiniteScroll.vue  Modal.vue  SettingsModal.vue  StarRating.vue  TextAreaField.vue  TextField.vue  ToggleSwitch.vue  UpdateModal.vue  types.ts
src/composables/: useInfiniteScroll.ts  useWatchRecordFields.ts
src/plugins/: index.ts  naive.ts  pinia.ts  router.ts
src/router/: index.ts
src/services/: analytics.ts  api-cache.ts  database-api.ts  database.ts  index.ts  request-queue.ts  tmdb.ts  update.ts
src/services/database/: connection.ts  index.ts  schema.ts  utils.ts
src/services/database/dao/: movie.dao.ts  replay-record.dao.ts  statistics.dao.ts
src/stores/: app.ts  movie.ts
src/styles/: main.css
src/types/: index.ts  tmdb.ts
src/types/import/: index.ts  types.ts
src/utils/: api-utils.ts  api.ts  appSettings.ts  browser.ts  cacheManager.ts  constants.ts  historyDate.ts  imageCache.ts  imageCacheCore.ts  imagePrefetch.ts  modal.ts  search.ts  seasonProgress.ts  titleUtils.ts  tmdbCacheMaintenance.ts  tmdbSearchEnhancer.ts  watchInsights.ts
src/utils/storage/: constants.ts  index.ts
src/views/: Detail.vue  History.vue  Home.vue  Import.vue  Library.vue  Record.vue
src/views/Detail/: index.vue  types.ts
src/views/Detail/components/: ActionButtons.vue  DeleteSection.vue  DetailContent.vue  DetailHeader.vue  DetailModals.vue  DetailSidebar.vue  EpisodeGuideCard.vue  MovieBasicInfo.vue  MovieDetails.vue  RatingComparison.vue  ReplayRecordSection.vue  WatchProgress.vue  WatchSource.vue
src/views/Detail/composables/: useDetailActions.ts  useDetailData.ts  useDetailUI.ts  useDetailUtils.ts
src/views/History/composables/: useHistoryData.ts  useHistoryView.ts
src/views/Home/composables/: useHomeData.ts
src/views/Import/: index.vue
src/views/Import/components/: DoubanImportPanel.vue  FileOperationsPanel.vue  ImportNotice.vue
src/views/Import/hooks/: useDoubanImport.ts  useFileOperations.ts
src/views/Record/: index.vue  types.ts
src/views/Record/components/: ActionButtons.vue  MovieInfoSection.vue  RecordModals.vue  SearchResults.vue  SearchSection.vue  UserRecordForm.vue
src/views/Record/composables/: useFormLogic.ts  useSearchLogic.ts  useUIState.ts
tests/: register-ts-loader.mjs  run.test.mjs  ts-loader.mjs
